# webp-convertor-app

./: .gitignore  dump_project.py  project_dump.txt  pyproject.toml
apps/backend/: pyproject.toml
apps/backend/src/webp_backend/: __init__.py  app.py  config.py
apps/backend/src/webp_backend/routes/: __init__.py  jobs.py  uploads.py
apps/backend/src/webp_backend/services/: __init__.py  job_service.py
apps/frontend/: vite.config.ts
apps/frontend/src/: App.css  App.tsx
apps/frontend/src/components/: Download.tsx  Processing.tsx  Submit.tsx  Upload.tsx
apps/worker/: pyproject.toml
apps/worker/src/webp_worker/: __init__.py  __main__.py  cli.py  config.py  server.py
scripts/: run_backend.sh  run_frontend.sh  run_worker.sh
scripts/setup/: install_all.sh
