[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "webp-backend"
version = "0.1.0"
description = "Flask API and job orchestration for WebP conversion system"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.0",
    "flask-cors>=4.0",
    "werkzeug>=3.0",
    "webp-shared",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
webp-backend = "webp_backend.app:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["webp_backend*"]